added score div

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <option value="81">Normal</option>
           <option value="49">Hard</option>
         </select>
+        <div id="score"></div>
     </div>
 
     
