added reset button and reset event

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         <div id="wrapper" class="d-flex flex-wrap">
 
         </div>
-        <button class="btn btn-success my-3">Crea</button>
-        <select name="" id="">
-          <option value="100">Easy</option>
-          <option value="81">Normal</option>
-          <option value="49">Hard</option>
+        <button class="btn btn-success my-3" id="start">Crea</button>
+        <button class="btn btn-danger d-none" id="reset">Reset</button>
+        <select name="" id="select">
+          <option class="option" value="100">Easy</option>
+          <option class="option" value="81">Normal</option>
+          <option class="option" value="49">Hard</option>
         </select>
         <div id="score"></div>
     </div>
