fixed reset button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <div class="d-flex flex-column align-items-center" id="app">
         <h1 class="text-center my-4 text-light">Campo Minato</h1>
+        <div id="score" class="my-2 text-light fs-5"></div>
         <div id="wrapper" class="d-flex flex-wrap">
 
         </div>
@@ -40,7 +41,7 @@
           <option class="option" value="81">Normal</option>
           <option class="option" value="49">Hard</option>
         </select>
-        <div id="score"></div>
+        
     </div>
 
     
